--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -2393,6 +2393,7 @@ layers:
                                 /^CU.*$/.test(feature.ref) ||
                                 /^AP.*$/.test(feature.ref) ||
                                 /^RP.*$/.test(feature.ref) ||
+                                /^LM.*$/.test(feature.ref) ||
                                 /^MEX.*$/.test(feature.ref) 
                     }
                 # draw:
@@ -4356,6 +4357,14 @@ layers:
                                 text:
                                     offset: [0px, 0px]
 
+                        # using generic shield here, too white shields in Argentina, difficult to view hierarchy
+                        early:
+                            filter:
+                                - $zoom: { max: 11 }
+                            draw:
+                                mapzen_icon_library:
+                                    visible: true
+
                     AR:provincial:
                         filter: |
                             function() {
@@ -4420,41 +4429,43 @@ layers:
                             return (! /^US:.*$/.test(feature.network)) &&
                                 (   (!feature.shield_text && feature.ref) && 
                                     (
-                                        /^B.*$/.test(feature.ref)  ||
-                                        /^B .*$/.test(feature.ref) ||
-                                        /^A.*$/.test(feature.ref)  ||
                                         /^A .*$/.test(feature.ref) ||
+                                        /^A.*$/.test(feature.ref)  ||
+                                        /^AP.*$/.test(feature.ref) ||
+                                        /^B .*$/.test(feature.ref) ||
+                                        /^B.*$/.test(feature.ref)  ||
                                         /^CT.*$/.test(feature.ref) ||
-                                        /^D.*$/.test(feature.ref)  ||
                                         /^D .*$/.test(feature.ref) ||
-                                        /^N.*$/.test(feature.ref)  ||
+                                        /^D.*$/.test(feature.ref)  ||
+                                        /^IN:NH*$/.test(feature.network) ||
+                                        /^IN:SH*$/.test(feature.network) ||
+                                        /^IT:.*$/.test(feature.network) ||
+                                        /^IT:A-road*$/.test(feature.network) ||
+                                        /^IT:B-road*$/.test(feature.network) ||
+                                        /^LM.*$/.test(feature.ref) ||
                                         /^N .*$/.test(feature.ref) ||
+                                        /^N.*$/.test(feature.ref)  ||
                                         /^O.*$/.test(feature.ref) ||
                                         /^PE.*$/.test(feature.ref) ||
                                         /^QL.*$/.test(feature.ref) ||
                                         /^RP.*$/.test(feature.ref) ||
-                                        /^IT:A-road*$/.test(feature.network) ||
-                                        /^IT:B-road*$/.test(feature.network) ||
                                         /^SS.*$/.test(feature.ref) ||
-                                        /^IT:.*$/.test(feature.network) ||
-                                        /^IN:NH*$/.test(feature.network) ||
-                                        /^IN:SH*$/.test(feature.network) ||
                                         /^TR-roads.*$/.test(feature.network) ||
                                         /^VI-roads.*$/.test(feature.network)
-
                                 ) || (
                                     (feature.shield_text && feature.ref) &&
                                     (
+                                        /^AP.*$/.test(feature.ref) ||
+                                        /^AR.*$/.test(feature.ref) ||
+                                        /^CT.*$/.test(feature.ref) ||
+                                        /^CU.*$/.test(feature.ref) ||
+                                        /^MO.*$/.test(feature.ref) ||
+                                        /^PE.*$/.test(feature.ref) ||
+                                        /^PU.*$/.test(feature.ref) ||
+                                        /^QL.*$/.test(feature.ref) ||
                                         /^SH.*$/.test(feature.ref) ||
                                         /^SS.*$/.test(feature.ref) ||
-                                        /^CT.*$/.test(feature.ref) ||
-                                        /^QL.*$/.test(feature.ref) ||
-                                        /^PE.*$/.test(feature.ref) ||
-                                        /^AR.*$/.test(feature.ref) ||
-                                        /^MO.*$/.test(feature.ref) ||
-                                        /^TA.*$/.test(feature.ref) ||
-                                        /^PU.*$/.test(feature.ref) ||
-                                        /^CU.*$/.test(feature.ref)
+                                        /^TA.*$/.test(feature.ref)
                                     )
                                 )
                             )
@@ -4502,11 +4513,22 @@ layers:
                                 )
                             }
                         draw:
+                            # this AR:PR should be AR:provincial for the artwork to match the data value
                             mapzen_icon_library:
                                 sprite: |
                                     function() {
-                                        return ( 'generic_shield-' + feature.ref.length + 'char');
+                                        return ( 'AR:PR-' + feature.ref.replace("RP", "").length + 'char');
                                     }
+                                text:
+                                    text_source: |
+                                        function() {
+                                            return feature.ref.replace("RP", "");
+                                        }
+                        tert:
+                            filter: { kind_detail: tertiary, $zoom: { max: 12 } }
+                            draw:
+                                mapzen_icon_library:
+                                    visible: false
 
 
                     ###
@@ -4686,10 +4708,14 @@ layers:
                             mapzen_icon_library:
                                 sprite: |
                                     function() {
-                                        return ( 'PE:PE-' + feature.ref.length + 'char');
+                                        return ( 'PE:PE-' + feature.ref.replace("PE-", "").length + 'char');
                                     }
                                 text:
                                     offset: [0px, 3px]
+                                    text_source: |
+                                        function() {
+                                            return feature.ref.replace("PE-", "");
+                                        }
 
                     ### AREQUIPA
                     AR-roads:
@@ -4766,19 +4792,57 @@ layers:
                                         return ( 'DE:L-' + feature.shield_text.length + 'char');
                                     }
 
-                    # ### APURIMAC
-                    # AP-roads:
-                    #     filter: |
-                    #         function() {
-                    #             return feature.shield_text && (
-                    #                 /^AP-.*$/.test(feature.ref)
-                    #             )
-                    #         }
-                    #     draw:
-                    #         mapzen_icon_library:
-                    #             sprite: |
-                    #                 function() {
-                    #                     return ( 'DE:L-' + feature.shield_text.length + 'char');
+                    ### LIMA
+
+                    # this is not working
+                    LM-roads:
+                        filter: |
+                            function() {
+                                return feature.ref && (
+                                    /^LM.*$/.test(feature.ref)
+                                )
+                            }
+                        draw:
+                            mapzen_icon_library:
+                                sprite: |
+                                    function() {
+                                        return ( 'DE:L-' + feature.ref.replace("LM-", "").length + 'char');
+                                    }
+                                text:
+                                    text_source: |
+                                        function() {
+                                            return feature.ref.replace("LM-", "");
+                                        }
+                        # this is kinda a hack
+                        width_longggggg_ref_short:
+                            filter: function() { return (feature.ref.replace("LM-", "").length <= 5); }
+                            draw:
+                                mapzen_icon_library:
+                                    visible: true
+
+                    ### APURIMAC
+
+                    # this is not working
+                    AP-roads:
+                        filter: |
+                            function() {
+                                return feature.shield_text && (
+                                    /^AP.*$/.test(feature.ref)
+                                )
+                            }
+                        draw:
+                            mapzen_icon_library:
+                                sprite: |
+                                    function() {
+                                        return ( 'DE:L-' + feature.shield_text.length + 'char');
+                                    }
+
+                        # this is kinda a hack
+                        width_longggggg_ref_short:
+                            filter: function() { return (feature.ref.replace("AP-", "").length <= 5); }
+                            draw:
+                                mapzen_icon_library:
+                                    visible: true
 
                     ###
                     ### TURKEY
@@ -4869,7 +4933,7 @@ layers:
                             function() {
                                 return feature.ref && (
                                     /^VI-roads$/.test(feature.network) &&
-                                    feature.name:en == 'Ho Chi Minh Highway'
+                                    feature["name:en"] == 'Ho Chi Minh Highway'
                                 )
                             }
                         draw:
